--- a/templates/about.html
+++ b/templates/about.html
@@ -1,14 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    {% if title %}
-        <title>Home - {{title}}</title>
-    {% else %}
-        <title>Home</title>
-    {% endif %}
-</head>
-<body>
-  <h1>this is Luna's About Page </h1>
-</body>
-</html>
+{% extends "layout.html" %}
+
+{% block content %}
+    <h1>this is Luna's About Page </h1>
+{% endblock content %}
