--- a/templates/home.html
+++ b/templates/home.html
@@ -1,20 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    {% if title %}
-        <title>Home - {{title}}</title>
-    {% else %}
-        <title>Home</title>
-    {% endif %}
-</head>
-<body>
+{% extends "layout.html" %}
 
+{% block content %}
   {% for post in posts %}
      <h1>{{ post.title }}</h1>
      <p>By {{ post.author }} on {{post.date}}</p>
      <p>{{ post.content }}</p>
   {% endfor %}
 
-</body>
-</html>
+{% endblock content %}
